--- a/playbooks/roles/elasticsearch/templates/elasticsearch.compose.yml.j2
+++ b/playbooks/roles/elasticsearch/templates/elasticsearch.compose.yml.j2
@@ -4,7 +4,7 @@ version: '2'
 services:
   elastic:
     image: "{{ elastic_container }}:{{ elastic_ver }}"
-    container_name: "{{ rock_hostname }}"
+    container_name: rock-elasticsearch
     restart: "always"
     ports:
       - "{{ elastic_data_port }}:{{ elastic_data_port }}"
