--- a/playbooks/roles/kibana/templates/kibana-compose.yml.j2
+++ b/playbooks/roles/kibana/templates/kibana-compose.yml.j2
@@ -4,7 +4,7 @@ version: '2'
 services:
   kibana:
     image: "{{ kibana_image }}:{{ kibana_ver }}"
-    container_name: 'kibana'
+    container_name: 'rock-kibana'
     ports:
       - "{{ kibana_ip }}:{{ kibana_port }}:{{ kibana_port }}"
     restart: "always"
