Updated logstash compose file

--- a/playbooks/roles/logstash/templates/logstash.compose.yml.j2
+++ b/playbooks/roles/logstash/templates/logstash.compose.yml.j2
@@ -11,7 +11,12 @@ services:
     - "{{ logstash_data_dir }}:/usr/share/logstash/data/"
     - "{{ logstash_log_dir }}:{{ logstash_log_dir }}"
 
+    networks:
+      - rocknsm_inside
+      - rocknsm_outside
+
 networks:
-  default:
-    external:
-      name: 'rocknsm_inside'
+  rocknsm_inside:
+    external: true
+  rocknsm_outside:
+    external: true
