Set services to restart so containers would refresh
Changed kafka container

--- a/playbooks/roles/kibana/templates/kibana.service.j2
+++ b/playbooks/roles/kibana/templates/kibana.service.j2
@@ -1,9 +1,9 @@
 [Unit]
  Description = Kibana Container Service
- 
+
  Wants    = network.target
- Requires = docker.service
- 
+ Requires = docker.service zookeeper.service
+
  [Service]
  Type = simple
 
