Fixed Grant Curell boo boo

--- a/playbooks/roles/kafka/templates/kafka.service.j2
+++ b/playbooks/roles/kafka/templates/kafka.service.j2
@@ -2,7 +2,7 @@
  Description = Kafka Container Service
 
  Wants    = network.target
- Requires = docker.service
+ Requires = docker.service zookeeper.service
 
  [Service]
  Type = simple
