--- a/playbooks/roles/kibana/templates/kibana.service.j2
+++ b/playbooks/roles/kibana/templates/kibana.service.j2
@@ -2,13 +2,13 @@
  Description = Kibana Container Service
 
  Wants    = network.target
- Requires = docker.service zookeeper.service
+ Requires = docker.service
 
  [Service]
  Type = simple
 
  ExecStart = /usr/bin/docker-compose -f {{ rocknsm_dir }}/kibana/kibana-compose.yml up
- ExecStop  = /usr/bin/docker-compose -f {{ rocknsm_dir }}/kibana/kibana-compose.yml down -v
+ ExecStop  = /usr/bin/docker-compose -f {{ rocknsm_dir }}/kibana/kibana-compose.yml down
 
  [Install]
  WantedBy = multi-user.target
